--- a/style.css
+++ b/style.css
@@ -5,27 +5,37 @@
     box-sizing: border-box;
 }
 
+body{
+
+}
+
 .logo-background{
     height: 10vh;
     width: 100%;
-    background: white;
+    background: ;
+    overflow: hidden;
     position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-bottom: 1px solid lightgray;
-    border-radius: 50%;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
 }
 
 .logo{
     font-size: 1.5em;
     font-family: monospace;
     padding: 2em;
+    color: #ffffff;
+    text-shadow: 0px 0px 3px black;
 }
 
 .welcome-background{
-    height: 50vh;
-    border-bottom: 1px solid black;
+    height: 60vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: url(img/lotto-img1.jpg);
 }
 
 .welcome-text-container{
@@ -39,8 +49,11 @@
     font-size: 2em;
     text-transform: capitalize;
     font-family: cursive;
+    color: cyan;
 }
 
 .welcome-text strong{
+    color: #ffffff;
+    text-shadow: 0px 0px 3px rgb(0, 38, 255);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
